<resources>
    <string name="app_name">AdivinaEquipo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    //menu
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Liga Argentina</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="LigaArgentina">Liga Argentina</string>
    <string name="Premier">Premier League</string>
    <string name="SerieA">Serie A</string>
    <string name="ligaEspañola">Liga Española</string>
    <string name="FranceLigue">Ligue 1</string>
    <string name="International">Internacional</string>
    //clubes
    <string name="boca">Boca</string>
    <string name="river">River</string>
    <string name="racing">Racing</string>
    <string name="sanlorenzo">San Lorenzo</string>
    <string name="independiente">Independiente</string>
    <string name="estudiantes">Estudiantes</string>
    <string name="huracan">Huracan</string>
    <string name="banfield">Banfield</string>
    <string name="velez">Velez</string>
    <string name="lanus">Lanus</string>

    <string name="city">Manchester City</string>
    <string name="united">Manchester United</string>
    <string name="liverpool">Liverpool</string>
    <string name="arsenal">Arsenal</string>
    <string name="chelsea">Chelsea</string>
    <string name="everton">Everton</string>
    <string name="tottenham">Tottenham</string>
    <string name="westham">West Ham</string>
    <string name="leicester">Leicester</string>
    <string name="astonvila">Aston Villa</string>

    <string name="barca">Barcelona</string>
    <string name="real">Real Madrid</string>
    <string name="aleti">Atletico de Madrid</string>
    <string name="sevilla">Sevilla</string>
    <string name="valencia">Valencia</string>
    <string name="villareal">Villareal</string>
    <string name="zaragoza">Zaragoza</string>
    <string name="coruña">Deportivo La Coruña</string>
    <string name="athletic">Athletic Club</string>
    <string name="betis">Real Betis</string>

    <string name="inter">Inter de Milán</string>
    <string name="milan">Milan</string>
    <string name="roma">Roma</string>
    <string name="napoli">Napoli</string>
    <string name="juventus">Juventus</string>
    <string name="Lazio">Lazio</string>
    <string name="udinense">Udinense</string>
    <string name="catania">Calcio Catania</string>
    <string name="Fiorentina">Fiorentina</string>
    <string name="atalanta">Atalanta</string>







    //descripciones
    <string name="tres_letras">EL JUGADOR CONTIENE 3 LETRAS</string>
    <string name="cuatro_letras">EL JUGADOR CONTIENE 4 LETRAS</string>
    <string name="cinco_letras">EL JUGADOR CONTIENE 5 LETRAS</string>
    <string name="seis_letras">EL JUGADOR CONTIENE 6 LETRAS</string>
    <string name="siete_letras">EL JUGADOR CONTIENE 7 LETRAS</string>
    <string name="cocho_letras">EL JUGADOR CONTIENE 8 LETRAS</string>
    <string name="nueve_letras">EL JUGADOR CONTIENE 9 LETRAS</string>
    <string name="diez_letras">EL JUGADOR CONTIENE 10 LETRAS</string>
    <string name="catorce_letras">EL JUGADOR CONTIENE 14 LETRAS</string>
    <string name="diecisiete_letras">EL JUGADOR CONTIENE 17 LETRAS</string>
    <string name="verificar">VERIFICAR</string>
    <string name="jugador_correcto">Jugador Correcto!</string>
    <string name="jugador_incorrecto">Jugador Incorrecto!</string>
    <string name="InfoPartido">Información Del Partido</string>


    //matchinfo - ligaespanola1Fragment
    <string name="InfoLigaEspanola1">Barcelona le ganó al Real Madrid por 4 a 3</string>
    <string name="InfoLigaEspanola2">La victoria fue de visitante</string>
    <string name="InfoLigaEspanola3">23 de Marzo del 2014</string>
    <string name="InfoLigaEspanola4">Estadio Santiago Bernabéu</string>

    //matchinfo - galleryFragment
    <string name="infogallery1">Racing le ganó 1 a 0 a Godoy Cruz</string>
    <string name="infogallery2">La victoria le dió el titulo</string>
    <string name="infogallery3">14 de diciembre del 2014</string>
    <string name="infogallery4">Estadio Presidente Perón</string>
    //fragment2 - galleryFragment
    <string name="infogallery5">River le ganó a Boca 3 a 1</string>
    <string name="infogallery6">La victoria le dió el título a River</string>
    <string name="infogallery7">9 de Diciembre del 2018</string>
    <string name="infogallery8">Estadio Santiago Bernabeu</string>
    //fragment3 - galleryFragment
    <string name="infogallery9">Boca le ganó a Gremio por 3 a 0</string>
    <string name="infogallery10">Partido de ida de la final de la Libertadores 2007</string>
    <string name="infogallery11">13 de Junio del 2007</string>
    <string name="infogallery12">Estadio La Bombonera</string>
    //fragment4 - galleryFragment
    <string name="infogallery13">San Lorenzo empató 1 a 1 con Nacional</string>
    <string name="infogallery14">Partido de ida Libertadores 2014</string>
    <string name="infogallery15">6 de Agosto del 2014</string>
    <string name="infogallery16">Estadio Defensores de Chaco, Asunción</string>
    //fragment5 - galleryFragment
    <string name="infogallery17">Independiente le ganó 2 a 1 a Flamengo </string>
    <string name="infogallery18">Partido de ida Sudamericana 2017</string>
    <string name="infogallery19">6 de Diciembre Del 2017</string>
    <string name="infogallery20">Estadio Libertadores De América</string>

    //matchinfo - slideshowFragment
    <string name="infoslideshow1">Manchester City Ganó 3 a 2 a QPR</string>
    <string name="infoslideshow2">La victoria le dió el titulo</string>
    <string name="infoslideshow3">13 de Mayo del 2012</string>
    <string name="infoslideshow4">Etihad Stadium</string>

    //general
    <string name="AIPGame">AIPGame</string>
    <string name="slogan">Pon a prueba tu destreza Futbolistica!</string>
    <string name="volver">VOLVER</string>

    //homefragment
    <string name="Inicio">Inicio</string>
    <string name="homefragment1">Bienvenido a la App!</string>
    <string name="homefragment2">Aqui pondrás poner a prueba tus conocimientos</string>
    <string name="homefragment3">En la barra lateral podrás elegir entre las ligas mas importantes, en ellas encontrarás la formación del equipo y los
        jugadores en su posición. Tendras que adivinar los nombres de los mismos, completando el total
    de la plantilla para ganar!</string>
    <string name="homefragment4">Pon a prueba tu capacidad futbolística</string>
    <string name="homefragment5">Buena Suerte!</string>

    //GalleryFragment
    <string name="LigaArg">Liga Argentina</string>

    //SlideShowFragment
    <string name="LigaIng">Premier League</string>

</resources>