<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aristidevs.aipgames.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.aristidevs.aipgames.ui.gallery.GalleryFragment"
        android:label="@string/racing"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_galleryFragment2"
            app:destination="@id/galleryFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.aristidevs.aipgames.ui.slideshow.SlideshowFragment"
        android:label="@string/city"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/ligaespanola1"
        android:name="com.aristidevs.aipgames.ui.ligaespañola.ligaespanola1"
        android:label="@string/barca"
        tools:layout="@layout/fragment_ligaespanola1" />
    <fragment
        android:id="@+id/galleryFragment2"
        android:name="com.aristidevs.aipgames.ui.gallery.GalleryFragment2"
        android:label="@string/river" >
        <action
            android:id="@+id/action_galleryFragment2_to_galleryFragment3"
            app:destination="@id/galleryFragment3" />
        <action
            android:id="@+id/action_galleryFragment2_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment3"
        android:name="com.aristidevs.aipgames.ui.gallery.GalleryFragment3"
        android:label="@string/boca" >
        <action
            android:id="@+id/action_galleryFragment3_to_galleryFragment2"
            app:destination="@id/galleryFragment2" />
        <action
            android:id="@+id/action_galleryFragment3_to_galleryFragment4"
            app:destination="@id/galleryFragment4" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment4"
        android:name="com.aristidevs.aipgames.ui.gallery.GalleryFragment4"
        android:label="@string/sanlorenzo"
        tools:layout="@layout/fragment_gallery_fragment4" >
        <action
            android:id="@+id/action_galleryFragment4_to_galleryFragment3"
            app:destination="@id/galleryFragment3" />
        <action
            android:id="@+id/action_galleryFragment4_to_galleryFragment5"
            app:destination="@id/galleryFragment5" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment5"
        android:name="com.aristidevs.aipgames.ui.gallery.GalleryFragment5"
        android:label="@string/independiente" >
        <action
            android:id="@+id/action_galleryFragment5_to_galleryFragment4"
            app:destination="@id/galleryFragment4" />
    </fragment>
</navigation>