<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/fondostadium">

    <ImageView
        android:id="@+id/ivHomeFragment"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/aipgamelogo"
        />

    <TextView
        android:id="@+id/textHome"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHomeFragment"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/homefragment1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/textHome2"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/homefragment2"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/textHome3"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/homefragment3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/textHome4"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/homefragment4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/textHome5"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHome4"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/homefragment5"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"/>



</androidx.constraintlayout.widget.ConstraintLayout>